--- a/LS4/index.html
+++ b/LS4/index.html
@@ -11,6 +11,11 @@
 
 <body>
     <h1>TodoList</h1>
+    <button id="all">All</button>
+    <button id="completed">Completed</button>
+    <button id="uncompleted">Uncompleted</button>
+    <br>
+    <br>
     <input id="inputtodo" type="text">
     <button id="add-btn">Add</button>
     <div id="todoList">
